[package]
name = "pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["std"] }
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
tokio = { version = "1.36.0", features = ["full"] }
